<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Serial Port API sample</string>
    <string name="about_msg" translatable="false">
Serial Port API sample v1.1\n
\n
This program is the sample application provided with project android-serialport-api.\n
\n
More information and bug report on [http://code.google.com/p/android-serialport-api]\n
\n
Copyright 2010-2011 Cedric Priscal\n
\n
Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at\n
\n
http://www.apache.org/licenses/LICENSE-2.0\n
\n
Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.\n
	</string>
    <string name="error_configuration" translatable="false">Please configure your serial port first.</string>
    <string name="error_security" translatable="false">You do not have read/write permission to the serial
		port.</string>
    <string name="error_unknown" translatable="false">The serial port can not be opened for an unknown
		reason.</string>
    <string name="send_setting_send_text">Send Text</string>
    <string name="send_setting_send_hex">Send Hex</string>
    <string name="title_custom_buardate">*custom baudrate:%s</string>
    <string name="title_serial_port">Port:</string>
    <string name="title_baudrate">Baudrate:</string>
    <string name="title_data_bits">Data Bits:</string>
    <string name="title_parity">Parity:</string>
    <string name="title_stop_bits">Stop Bits:</string>
    <string name="title_flow_type">Flow Type:</string>
    <string name="title_open">Open</string>
    <string name="title_send">Send</string>
    <string name="title_clear">Clear</string>
    <string name="tips_serial_port_not_open">Serial Port not open</string>
    <string name="tips_please_enter_a_data">Please enter a data</string>
    <string name="tips_formatting_hex_error">The formatting is bad,not hexadecimal</string>
    <string name="tips_please_enter_custom_baudrate">Enter custom baudrate</string>
    <string name="tips_cannot_be_opened">Cannot be opened.msg：%s</string>
</resources>